css/style.css
/****** General ***********/
body {
  font-family: "Raleway", sans-serif;
  display: flex;
  max-width: 1440px;
  height: 1722.02px;
  margin: 0 auto;
}

:root {
  --main-color: #0065fc;
  --main-bg-color: #f2f2f2;
  --filter-bg-color: #deebff;
}

.fa-solid {
  color: var(--main-color);
}

.main-container {
  width: 100%;
  max-width: 1440px;
  padding: 0 50px;
  box-sizing: border-box;
}

a {
  color: inherit;
  text-decoration: none;
}

.afficherplus {
  font-size: 18px;
  font-weight: bold;
}

header {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

nav {
  display: flex;
  justify-content: flex-end;
  gap: 68px;
  left: 1096px;
}

nav a {
  padding-top: 10px;
}

.logo {
  width: 61.09px;
  height: 19px;
  align-self: center;
  margin-top: 20px;
}

.navlink {
  color: black;
}

.navlink:hover,
.navlink.activ {
  border-width: 2px 0px 0px 0px;
  border-color: #0065fc;
  border-style: solid;
  color: #0065fc;
}

#headerfooter {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 25px;
}

#contenttxt {
  display: block;
  width: 100%;
  margin-top: 45px;
}

h1 {
  width: 100%;
  font-weight: 700;
  font-size: 22px;
  line-height: 25.83px;
  gap: 35px;
}

h3 {
  margin-block-start: 0em;
  margin-block-end: 0em;
}

h4 {
  font-weight: bold;
  margin: 0px;
}

#formulaire {
  display: flex;
  height: 49px;
  border-radius: 15px;
}

form {
  display: flex;
}

#logobox {
  width: 5%;
  border: 1px solid #f2f2f2;
  border-radius: 15px 0px 0px 15px;
  background-color: #f2f2f2;
  display: flex;
  align-items: center;
  justify-content: center;
}

.fa-location-dot {
  color: black;
  display: flex;
  align-items: center;
}

input {
  width: 50%;
  font-size: 18px;
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  border: 1px solid #f2f2f2;
}

input::placeholder {
  text-align: center;
  display: flex;
  justify-self: center;
  color: black;
}

button[type="submit"] {
  width: 45%;
  font-family: "Raleway";
  font-weight: bold;
  font-size: 18px;
  background-color: #0065fc;
  color: white;
  height: 100%;
  border: 1px;
  border-radius: 0px 15px 15px 0px;
}

#searchButton {
  display: none;
}

#filterbar {
  font-weight: bold;
  width: 100%;
  display: flex;
  flex-direction: row;
  gap: 15px;
}

.Filtres {
  font-size: 18px;
  display: flex;
  color: black;
  width: 54px;
  height: 21px;
  line-height: 21.13px;
  font-weight: 700;
}

#buttonfilters {
  display: flex;
  flex-direction: row;
  gap: 15px;
  flex-wrap: wrap;
}

.filter-button {
  height: 50px;
  font-size: 17px;
  font-weight: 700;
  line-height: 19.96px;
  border-radius: 50px;
  border: 2px solid #d9d9d9;
  padding: 5px 18px 5px 18px;
  gap: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.filter-button:hover {
  background-color: #deebff;
}

#info {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;
}

#info .fa-info {
  width: 20px;
  height: 20px;
  border-radius: 100%;
  border: 1px solid #d9d9d9;
  padding: 2px;
  text-align: center;
}

.section-title {
  margin: 0;
  font-size: 22px;
}

.card {
  background-color: white;
  border-radius: 20px;
  padding: 5px;
  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
  object-fit: cover;
}

.card-title {
  font-size: 16px;
}

.euro {
  font-weight: 700;
}

.neutral-star {
  color: var(--main-bg-color);
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
  display: flex;
  justify-content: space-between;
}

.hebergements-and-populaires section {
  border-radius: 20px;
  padding: 30px;
  box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
  width: 65%;
  display: flex;
  flex-direction: column;
  margin-bottom: 35px;
  background-color: #f2f2f2;
}

.hebergements-title {
  margin-bottom: 15px;
}

.ligne-hebergements {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  width: 100%;
  height: 100%;
  margin: 15px 0;
}

.hebergements a {
  width: 30%;
}

.hebergements .ligne-hebergements a .card {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
}

.hebergements .ligne-hebergements a .card img {
  width: 100%;
  height: 113px;
  border-top-left-radius: 15px;
  border-bottom-left-radius: 0px;
  border-top-right-radius: 15px;
  border-bottom-right-radius: 0px;
}

.hebergements .ligne-hebergements a .card .card-content {
  display: flex;
  flex-direction: column;
  padding: 0px 15px 0px 15px;
  flex-grow: 1;
}

.hebergements .ligne-hebergements .card-title {
  margin-top: 5px;
}

.hebergements .ligne-hebergements .card-subtitle {
  margin: 0;
}

.hebergements .card-rating {
  margin-top: auto;
}

.hebergements .affichertxtbox {
  margin: 15px 15px 0px 15px;
}

/****** Populaires ***********/
.populaires {
  width: 32%;
  margin-bottom: 35px;
  background-color: #f2f2f2;
}

.populaires-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.populaires-card .card {
  display: flex;
  margin-top: 33px;
}

.populaires-card img {
  width: 33%;
  height: 140px;
  border-top-left-radius: 15px;
  border-bottom-left-radius: 15px;
}

.populaires-card .card-content {
  width: 67%;
  padding-left: 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-sizing: border-box;
}

.populaires-card .card-title {
  margin-top: 10px;
  margin-bottom: 4px;
}

.populaires-card .card-subtitle {
  margin: 0;
}

.populaires-card .card-rating {
  margin-bottom: 5px;
}

/****** activités ***********/

.activity-marseille {
  margin: 0 15px;
}

.Activités-title {
  display: flex;
  margin-top: 20px;
  margin-bottom: 20px;
}

.Ligne-Activités {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.activity-marseille a {
  width: 23%;
}

.activity-marseille .card {
  width: 100%;
  display: flex;
  flex-direction: column;
  border-radius: 20px;
  padding: 0px;
}

.activity-marseille img {
  width: 100%;
  height: 286px;
  border-top-left-radius: 15px;
  border-bottom-left-radius: 0px;
  border-top-right-radius: 15px;
  border-bottom-right-radius: 0px;
}

.activity-marseille .card-content {
  display: flex;
  flex-direction: column;
  padding: 0px 15px 0px 15px;
}

.activity-marseille .card-title {
  margin-top: 20px;
  margin-bottom: 20px;
}

/****** Footer ***********/

footer {
  margin-top: 35px;
  display: flex;
  flex-direction: row;
  background-color: #f2f2f2;
}

footer a {
  margin: 15px 0;
}

.footer-content {
  width: 33%;
  display: flex;
  flex-direction: column;
  padding: 20px;
}

/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */

@media (max-width: 1023.98px) {
  #filterbar {
    flex-direction: column;
  }

  .hebergements-and-populaires {
    flex-direction: column;
  }

  .hebergements {
    width: 100%;
  }

  .populaires {
    width: 100%;
    margin-top: 50px;
  }

  .populaires- {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .populaires-card {
    display: flex;
    justify-content: space-between;
  }

  .populaires-card a {
    width: 30%;
  }

  .populaires-card .card-title {
    font-size: 14px;
  }

  .populaires-card .card-subtitle {
    font-size: 13px;
  }

  .activity-marseille a {
    width: 22%;
  }

  .activity-marseille img {
    width: 100%;
    height: 70%;
  }

  .activity-marseille .card {
    display: flex;
    height: 100%;
  }

  .activity-marseille .card-content {
    display: flex;
    justify-content: center;
    height: 30%;
  }

  .activity-marseille .card-title {
    justify-content: center;
  }

  .footer-content {
    width: 33%;
    display: flex;
    flex-direction: column;
    padding: 15px;
  }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
  .main-container {
    padding: 0;
  }

  header {
    display: flex;
    flex-direction: column;
    margin: 0;
  }

  nav {
    width: 100%;
    margin: 0;
    gap: 0px;
  }

  nav a {
    display: flex;
    justify-content: center;
    width: 50%;
  }

  .logo {
    display: flex;
    padding: 30px;
    gap: 10px;
    justify-self: center;
  }

  .navlink:hover,
  .navlink.activ {
    padding-bottom: 8px;
    border-width: 0px 0px 2px 0px;
    border-color: #0065fc;
    border-style: solid;
    color: #0065fc;
  }

  .navlink {
    padding-bottom: 8px;
    border-width: 0px 0px 2px 0px;
    border-color: #f2f2f2;
    border-style: solid;
  }

  #contenttxt {
    display: block;
    width: 100%;
    margin-top: 0;
  }

  p {
    margin: 0;
  }

  h1 {
    width: 100%;
    font-weight: 700;
    font-size: 22px;
    line-height: 25.83px;
    margin: 5px;
  }

  #headerfooter {
    box-sizing: border-box;
    width: 100%;
    padding: 20px;
  }

  #formulaire {
    width: 100%;
  }

  #logobox {
    width: 15%;
  }

  #filterbar {
    box-sizing: border-box;
  }

  .filter-button {
    width: 33%;
  }

  form {
    width: 100%;
  }

  button[type="submit"] {
    display: none;
  }

  input {
    width: 100%;
  }

  #buttonfilters {
    column-gap: 6px;
  }

  .filter-button {
    font-size: 14px;
  }

  #info p {
    width: 100%;
    margin: 0;
  }

  #searchButton {
    width: 20%;
    background-color: #0065fc;
    color: white;
    border: 1px;
    border-radius: 15px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    margin-left: -15px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
  }

  .fa-magnifying-glass {
    color: white;
  }

  .hebergements-and-populaires {
    flex-direction: column-reverse;
  }

  .hebergements-and-populaires section {
    border-radius: 0px;
  }

  .populaires {
    background-color: #f2f2f2;
    margin-top: 15px;
    margin-bottom: 0;
  }

  .populaires-card {
    width: 100%;
    flex-direction: column;
  }
  .populaires-card a {
    width: 100%;
  }

  .populaires-card .card {
    margin-top: 15px;
  }

  .hebergements {
    width: 100%;
    background-color: white;
    margin-bottom: 0;
  }

  .ligne-hebergements {
    display: block;
    flex-direction: column;
    margin: 0;
  }

  .hebergements a {
    width: 100%;
    padding: 10px;
  }

  .hebergements-card {
    width: 100%;
  }

  .hebergements .affichertxtbox {
    margin: -8px;
  }

  .activity-marseille {
    display: block;
    flex-direction: column;
    margin: 0 25px;
  }

  .activity-marseille .card {
    flex-direction: column;
  }

  .Ligne-Activités {
    flex-direction: column;
    gap: 15px;
  }

  .Ligne-Activités a {
    width: 100%;
    height: 270px;
  }

  footer {
    flex-direction: column;
  }

  .footer-content {
    box-sizing: border-box;
    padding: 20px;
    width: 100%;
  }
}

